# sublesee

./: LICENSE  README.md
.github/workflows/: release.yml  run-tests-on-pr.yml
.github/workflows/scripts/: test_branch_dev.sh
.github/workflows/scripts/data/: 1.Eng.srt
soft/: pyproject.toml
soft/pip/: README.md  check_local.bash
soft/src/sublesee/: ai_skip.py  io.py  parse.py  scripting.py  scripts.py
soft/tests/: test_ai_skip.py  test_io.py  test_parse.py
soft/tests/ai_skip/: 04. Anons novogo filma s Terensom i Filipom.Eng.srt.xlsx
soft/tests/subs/: 1.Eng.xlsx
soft/tests/trans/: 1.Eng.srt.joined.xlsx  1.Eng.srt.xlsx  1.Eng.srt.xlsx.srt
